completed wave test and redorded it in readme. updated background color of img on contact page to correct contrast error

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -152,6 +152,7 @@ a {
     width: 100%;
     background-size: cover;
     background-image: url('../images/form-background.jpg');
+    background-color: #ffbf00;
 }
 
 .contact-form {
@@ -176,6 +177,7 @@ a {
     width: 34%;
     color: black;
     height: fit-content;
+    font-weight: 900;
 }
 
 .text-input {
